# fastapi_course

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.example.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 09af771aab1a_add_votes_table.py  2be4d559b268_add_content_column_to_posts_table.py  4bc3e6f37093_add_user_table.py  7b5761e3c4fc_add_foreign_key_to_posts_tabe.py  8860aa403865_add_last_few_columns_to_posts_table.py  b4114f032742_create_posts_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: auth.ts  client.ts  posts.ts  votes.ts
frontend/src/components/: Navbar.vue  PostCard.vue  VoteButton.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
frontend/src/views/: CreatePostView.vue  EditPostView.vue  LoginView.vue  PostDetailView.vue  PostsView.vue  RegisterView.vue
